Fix 处理gradle test无法正常filter test unit的问题